Correcion de enlaces

--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -37,8 +37,8 @@
                 <li><a href="Fotos.html">Fotos</a></li>
                 <li><a href="Historia.html">Historia</a></li>
                 <li><a href="Nosotros.html">Nosotros</a></li>
-                <li><a href="Produccion.html">Produccion</a></li>
-                <li><a href="Contacto.html">Contactos</a></li>
+                <li><a href="produccion.html">Produccion</a></li>
+                <li><a href="pontacto.html">Contactos</a></li>
 
 
             </ul>
