--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -13,9 +13,11 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Tenor+Sans&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
 
 
+    <!--Mi BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--Mi CSS-->
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
@@ -69,8 +71,8 @@
     <footer>
 
 
-        <div class="contenedorfooter">
-            <h2> Contactanos </h2>
+        <div class="contenedorFooter">
+            <h4> Contactanos </h4>
         </div>
 
         <div class="redesSociales">
@@ -91,6 +93,10 @@
 
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
