--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,11 +13,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Tenor+Sans&display=swap"
         rel="stylesheet">
-    <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
 
+    <!--Mi BOOTSTRAP-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--Mi CSS-->
     <link rel="stylesheet" href="../estilos/estilos.css">
 </head>
+
 <body>
     <header class="header">
         <a href="../index.html">
@@ -43,7 +46,7 @@
         </nav>
     </header>
     <section>
-        <h2>Contactos </h2>
+        <h3> Contactanos </h3>
 
         <div class="datosContacto">
             <i class="fas fa-phone-square">
@@ -108,30 +111,34 @@
 
 
 
-    <footer>
+        <footer>
 
 
-        <div class="contenedorfooter">
-            <h2> Contactanos </h2>
-        </div>
+            <div class="contenedorFooter">
+                <h4> Contactanos </h4>
+            </div>
 
-        <div class="redesSociales">
-            <a href="facebook.com/javier.emanuel.gaitan/">
-                <i class="fab fa-facebook"></i> </a>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-telegram"></i>
-            <a href="https://www.instagram.com/freyrhidromiel/">
-                <i class="fab fa-instagram"></i>
-            </a>
-        </div>
+            <div class="redesSociales">
+                <a href="facebook.com/javier.emanuel.gaitan/">
+                    <i class="fab fa-facebook"></i> </a>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-telegram"></i>
+                <a href="https://www.instagram.com/freyrhidromiel/">
+                    <i class="fab fa-instagram"></i>
+                </a>
+            </div>
 
 
-        <div class="contenedorfooter">
-            <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
+            <div class="contenedorfooter">
+                <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
 
-        </div>
+            </div>
 
-    </footer>
-
+        </footer>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+        <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
