--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -84,6 +84,43 @@
     </main>
 
 
+    <section>
+        <div class="container">
+            <div class="row">
+
+                <div class="col-4">
+                    <div class="card">
+                        <img src="../Imagenes/botella.jpg" alt="..." class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">prueba 1 </h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vitae
+                                placeat omnis, molestias porr</p>
+                        </div>
+
+                    </div>
+
+                </div>
+                <div class="col-4">
+                    <div class="card">
+                        <img src="../Imagenes/botella.jpg" alt="..." class="card-img-top">
+                        <div class="card-body">
+                            <h5 class="card-title">prueba 1 </h5>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo vitae
+                                placeat omnis, molestias</p>
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+
+
+
+
+    </section>
+
+
 
     <footer>
 
