agrego acorden y cards en contactos e nosostros

--- a/index.html
+++ b/index.html
@@ -69,13 +69,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="../Imagenes/noreuga.jpg" class="d-block w-100" alt="...">
+                        <img src="./Imagenes/noreuga.jpg" class="d-block w-100" alt="Paisaje verde">
                     </div>
                     <div class="carousel-item">
-                        <img src="../Imagenes/noruega2.png" class="d-block w-100" alt="...">
+                        <img src="./Imagenes/noruega2.png" class="d-block w-100" alt="paisajeagua">
                     </div>
                     <div class="carousel-item">
-                        <img src="../Imagenes/noruega3.png" class="d-block w-100" alt="...">
+                        <img src="./Imagenes/noruega3.png" class="d-block w-100" alt="paisajenocturno">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
