--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -86,37 +86,47 @@
 
     <section>
 
-        <h2> Algunos de los Dioses relacionados con la Meet</h2>
-        <div class="container">
-            <div class="row">
+        <div class="nosotrosCard">
 
-                <div class="col-4">
-                    <div class="card">
-                        <img src="../Imagenes/freyrDios.jpg" alt="DiosFreyr" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Freyr </h5>
-                            <p class="card-text">Freyr también llamado Frey, es el dios de la fertilidad en la mitología nórdica, íntimamente conectado con las cosechas, con la lluvia, el sol, las bodas y la virilidad; además tenía poderío sobre muchas riquezas, siendo el dios más sobresaliente del clan Vanir.</p>
+            <h3> Algunos de los Dioses relacionados con la Meet</h3>
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="../Imagenes/freyrDios.jpg" alt="DiosFreyr" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Freyr </h5>
+                                <p class="card-text">Freyr también llamado Frey, es el dios de la fertilidad en la
+                                    mitología nórdica, íntimamente conectado con las cosechas, con la lluvia, el sol,
+                                    las bodas y la virilidad; además tenía poderío sobre muchas riquezas, siendo el dios
+                                    más sobresaliente del clan Vanir.</p>
+                            </div>
+
                         </div>
 
                     </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="../Imagenes/Thor.jpg" alt="Thordios" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Thor </h5>
+                                <p class="card-text">Thor es el dios del trueno y fuerza en la mitología nórdica y
+                                    germánica. Su papel es complejo ya que tenía influencia en áreas muy diferentes,
+                                    tales como el clima, las cosechas, la protección, la consagración, la justicia, las
+                                    lidias, los viajes y las batallas.</p>
+                            </div>
 
-                </div>
-                <div class="col-4">
-                    <div class="card">
-                        <img src="../Imagenes/Thor.jpg" alt="Thordios" class="card-img-top">
-                        <div class="card-body">
-                            <h5 class="card-title">Thor </h5>
-                            <p class="card-text">Thor es el dios del trueno y fuerza en la mitología nórdica y germánica. Su papel es complejo ya que tenía influencia en áreas muy diferentes, tales como el clima, las cosechas, la protección, la consagración, la justicia, las lidias, los viajes y las batallas.</p>
                         </div>
+
 
                     </div>
 
 
                 </div>
 
-
-
-
+            </div>
+        </div>
 
     </section>
 
