--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -40,7 +40,7 @@
                 <li><a href="Historia.html">Historia</a></li>
                 <li><a href="Nosotros.html">Nosotros</a></li>
                 <li><a href="produccion.html">Produccion</a></li>
-                <li><a href="pontacto.html">Contactos</a></li>
+                <li><a href="contacto.html">Contactos</a></li>
 
 
             </ul>
@@ -66,6 +66,51 @@
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae optio sapiente nesciunt. Aut sit
             dolorum consequuntur fugit illum nulla maiores, quis quod rem dicta ducimus. Incidunt est dolor unde!</p>
     </section>
+
+
+    <section>
+
+        <div class="nosotrosCard">
+
+            <h3> El Equipo Freyr</h3>
+            <div class="container">
+                <div class="row">
+
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="../Imagenes/hombre1.jpg" alt="Javierfundador" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Javier Gaitan </h5>
+                                <p class="card-text">Javier es quien creo y comenzo con la idea de producir hidromiel con productos 100% locales de Cordoba. Enfocado en llevarle a las personas un producto diferente y unico.</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="col-4">
+                        <div class="card">
+                            <img src="../Imagenes/hombre2.jpg" alt="TMarcelocompañero" class="card-img-top">
+                            <div class="card-body">
+                                <h5 class="card-title">Agustin Villagran </h5>
+                                <p class="card-text">Agustin es la mano derecha de Javier, se encarga de la imagen de Freyr en las redes. Su motivacion y manejo para las situaciones dificiles lo hace una parte principal de des duo dinamico.</p>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+
+
+                </div>
+
+            </div>
+        </div>
+
+    </section>
+
+
+
+
 
 
     <footer>
