--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,26 +45,83 @@
             </ul>
         </nav>
     </header>
-    <section>
+
+
+
+
+    <section class="contacto">
+
         <h3> Contactanos </h3>
 
-        <div class="datosContacto">
-            <i class="fas fa-phone-square">
-                <p>Telefono: +54 3512075102</p>
-            </i>
-            <i class="fas fa-envelope">
-                <p>Email: freyrhidromiel@gmail.com</p>
-            </i>
-            <a href="https://www.instagram.com/freyrhidromiel/">
-                <i class="fab fa-instagram-square">
-                    <p>Instagram: @freyrhidromiel</p>
-                </i>
-            </a>
+        <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                        Telefono de contacto directo
+                    </button>
+                </h2>
+                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <div class="datosContacto">
+                            <i class="fas fa-phone-square">
+                                <p>Telefono: +54 3512075102</p>
+                            </i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingTwo">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                        Email de contacto
+                    </button>
+                </h2>
+                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <div class="datosContacto">
+
+                            <i class="fas fa-envelope">
+                                <p>Email: freyrhidromiel@gmail.com</p>
+                            </i>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header" id="flush-headingThree">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                        Instagram
+                    </button>
+                </h2>
+                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
+                    data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body">
+                        <div class="datosContacto">
+
+                            <a href="https://www.instagram.com/freyrhidromiel/">
+                                <i class="fab fa-instagram-square">
+                                    <p>Instagram: @freyrhidromiel</p>
+                                </i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </section>
 
+
+
+
     <section>
-        <h2>Nos podes encontrar </h2>
+        <h2 class="contacto">Nos podes encontrar </h2>
 
 
         <iframe
@@ -74,7 +131,9 @@
 
     <!--FORMULARIO DE CONTACTO-->
 
-    <h3>Si estas interesado en mas informacion podes contactarnos por este formulario</h2>
+    <div class="formularioCuerpo">
+
+        <h4>Si estas interesado tener nuestras ultimas noticias por email registrate en este formulario</h4>
 
         <section id="contacto" class="contacto">
 
@@ -82,7 +141,7 @@
 
             <form action="/" method="post">
                 <fieldset>
-                    <legend>Formulario de Contacto</legend>
+                    <legend>Formulario de Suscripcion</legend>
 
 
                     <label for="nombre">Nombre</label>
@@ -107,38 +166,38 @@
 
         </section>
 
+    </div>
 
 
 
-
-        <footer>
-
-
-            <div class="contenedorFooter">
-                <h4> Contactanos </h4>
-            </div>
-
-            <div class="redesSociales">
-                <a href="facebook.com/javier.emanuel.gaitan/">
-                    <i class="fab fa-facebook"></i> </a>
-                <i class="fab fa-twitter"></i>
-                <i class="fab fa-telegram"></i>
-                <a href="https://www.instagram.com/freyrhidromiel/">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </div>
+    <footer>
 
 
-            <div class="contenedorfooter">
-                <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
+        <div class="contenedorFooter">
+            <h4> Contactanos </h4>
+        </div>
 
-            </div>
+        <div class="redesSociales">
+            <a href="facebook.com/javier.emanuel.gaitan/">
+                <i class="fab fa-facebook"></i> </a>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-telegram"></i>
+            <a href="https://www.instagram.com/freyrhidromiel/">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
 
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-            crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
+
+        <div class="contenedorfooter">
+            <p class="copy">Freyr Hidromiel 2021 Copyright © Todos los derechos reservados</p>
+
+        </div>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7cf6221d6a.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
