agrego boostrap en todas las pages de manera correcta, corrigo errores

--- a/pages/Fotos.html
+++ b/pages/Fotos.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Imagenes/logo.jpg">
+    <link rel="shortcut icon" href="../Imagenes/logo.jpg">
     <title>Fotos</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,6 +88,30 @@
 
         </div>
     </section>
+
+    <aside class="asideVenta">
+
+        <h3> No te olvides de pedir la tuya!</h3>
+
+        <div class="card" style="width: 18rem;">
+            <img src="../Imagenes/botella.jpg" class="card-img-top" alt="botella">
+            <div class="card-body">
+                <h5 class="card-title">Meet Tradicional</h5>
+                <p class="card-text">Hidromiel tradicional 500ml </p>
+                <a href="https://www.instagram.com/freyrhidromiel/" class="btn btn-primary">Comprar ahora!</a>
+            </div>
+        </div>
+
+
+
+
+
+
+
+    </aside>
+
+
+
 
 
     <footer>
