--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Imagenes/logo.jpg">
-    <title>Nosotros</title>
+    <link rel="shortcut icon" href="../Imagenes/logo.jpg">
+    <title>Produccion</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -82,6 +82,30 @@
             </div>
         </div>
     </section>
+
+
+    <section class="produccion">
+
+        <h3> Podes ayudarnos a seguir creciendo con este proyecto</h3>
+
+        <div class="card" style="width: 18rem;">
+            <img src="../Imagenes/cafe.png" class="card-img-top" alt="cafecito app">
+            <div class="card-body">
+                <h5 class="card-title">Un cafecito para Freyr</h5>
+                <p class="card-text">Podes regalarnos un cafecito y vas a estar ayudando a nuetro proyecto a crecer! </p>
+                <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitar un cafecito</a>
+            </div>
+        </div>
+
+
+
+
+
+
+
+    </section>
+
+
 
     <footer>
 
