--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./Imagenes/logo.jpg">
+    <link rel="shortcut icon" href="../Imagenes/logo.jpg">
     <title>Contacto</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -121,7 +121,7 @@
 
 
     <section>
-        <h2 class="contacto">Nos podes encontrar </h2>
+        <h2 class="contac">Nos podes encontrar </h2>
 
 
         <iframe
