Agrego animaciones hover en menu y carta de compra

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
 
             <ul class='flexcontein'>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="./pages/Fotos.html">Fotos</a></li>
-                <li><a href="./pages/Historia.html">Historia</a></li>
-                <li><a href="./pages/Nosotros.html">Nosotros</a></li>
-                <li><a href="./pages/produccion.html">Produccion</a></li>
-                <li><a href="./pages/contacto.html">Contactos</a></li>
+                <li class="listaElejida"><a  href="index.html">Inicio</a></li>
+                <li class="listaElejida"><a href="./pages/Fotos.html">Fotos</a></li>
+                <li class="listaElejida"><a href="./pages/Historia.html">Historia</a></li>
+                <li class="listaElejida"><a href="./pages/Nosotros.html">Nosotros</a></li>
+                <li class="listaElejida"><a href="./pages/produccion.html">Produccion</a></li>
+                <li class="listaElejida" ><a href="./pages/contacto.html">Contactos</a></li>
 
 
             </ul>
