--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -35,12 +35,12 @@
 
 
             <ul class='flexcontein'>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Fotos.html">Fotos</a></li>
-                <li><a href="Historia.html">Historia</a></li>
-                <li><a href="Nosotros.html">Nosotros</a></li>
-                <li><a href="produccion.html">Produccion</a></li>
-                <li><a href="contacto.html">Contactos</a></li>
+                <li class="listaElejida"><a href="../index.html">Inicio</a></li>
+                <li class="listaElejida"><a href="Fotos.html">Fotos</a></li>
+                <li class="listaElejida"><a href="Historia.html">Historia</a></li>
+                <li class="listaElejida"><a href="Nosotros.html">Nosotros</a></li>
+                <li class="listaElejida"><a href="produccion.html">Produccion</a></li>
+                <li class="listaElejida"><a href="contacto.html">Contactos</a></li>
 
 
             </ul>
@@ -84,15 +84,17 @@
     </section>
 
 
+
     <section class="produccion">
 
         <h3> Podes ayudarnos a seguir creciendo con este proyecto</h3>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card carta" style="width: 18rem;">
             <img src="../Imagenes/cafe.png" class="card-img-top" alt="cafecito app">
             <div class="card-body">
                 <h5 class="card-title">Un cafecito para Freyr</h5>
-                <p class="card-text">Podes regalarnos un cafecito y vas a estar ayudando a nuetro proyecto a crecer! </p>
+                <p class="card-text">Podes regalarnos un cafecito y vas a estar ayudando a nuetro proyecto a crecer!
+                </p>
                 <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitar un cafecito</a>
             </div>
         </div>
