--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -34,12 +34,12 @@
 
 
             <ul class='flexcontein'>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="Fotos.html">Fotos</a></li>
-                <li><a href="Historia.html">Historia</a></li>
-                <li><a href="Nosotros.html">Nosotros</a></li>
-                <li><a href="produccion.html">Produccion</a></li>
-                <li><a href="contacto.html">Contactos</a></li>
+                <li class="listaElejida"><a href="../index.html">Inicio</a></li>
+                <li class="listaElejida"><a href="Fotos.html">Fotos</a></li>
+                <li class="listaElejida"><a href="Historia.html">Historia</a></li>
+                <li class="listaElejida"><a href="Nosotros.html">Nosotros</a></li>
+                <li class="listaElejida"><a href="produccion.html">Produccion</a></li>
+                <li class="listaElejida"><a href="contacto.html">Contactos</a></li>
 
 
             </ul>
