Agrego media a video y corrijo animaciones

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 
 
             <ul class='flexcontein'>
-                <li class="listaElejida"><a  href="index.html">Inicio</a></li>
+                <li class="listaElejida"><a href="index.html">Inicio</a></li>
                 <li class="listaElejida"><a href="./pages/Fotos.html">Fotos</a></li>
                 <li class="listaElejida"><a href="./pages/Historia.html">Historia</a></li>
                 <li class="listaElejida"><a href="./pages/Nosotros.html">Nosotros</a></li>
                 <li class="listaElejida"><a href="./pages/produccion.html">Produccion</a></li>
-                <li class="listaElejida" ><a href="./pages/contacto.html">Contactos</a></li>
+                <li class="listaElejida"><a href="./pages/contacto.html">Contactos</a></li>
 
 
             </ul>
@@ -123,13 +123,8 @@
                         relación de miel/agua y la tolerancia de las levaduras al alcohol. Su uso fue fuertemente
                         difundido
                         por
-                        los
-                        pueblos de la antigüedad.En Europa, lo hicieron y lo bebieron
-                        los griegos, romanos, celtas, normandos, sajones y vikingos.5​En
-                        América, los mayas producían un tipo de hidromiel llamado "balché"6​ elaborado con base en agua,
-                        miel y
-                        trozos de corteza de árbol de balché (Lonchocarpus longistylus)7​ del cual la bebida recibe su
-                        nombre.
+                        los pueblos de la antigüedad.En Europa, lo hicieron y lo bebieron
+                        los griegos, romanos, celtas, sajones y vikingos.
                         Para
                         los mayas era una bebida sagrada utilizada en ceremonias religiosas y además consideraban que
                         tenía
@@ -182,10 +177,14 @@
                 <div>
                     <h3> El paso a paso en video</h3>
 
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div class="videoAdaptado">
+
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+
+                    </div>
 
                 </div>
             </div>
