--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -74,11 +74,12 @@
             <div>
                 <h3> El paso a paso en video</h3>
 
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-
+                <div class="videoAdaptado">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </div>
         </div>
     </section>
