agrego media para carrusel1

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <section>
-        <div>
+        <div class="carruselAdaptado">
 
             <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
